templates/css/styles.css
/* ... */
.banner_info {
    background: url('../images/1x/banner_info.jpg') no-repeat;
    -webkit-background-size: cover;
    background-size: cover;
    height: 450px;
    margin-top: 53px;
    color: #fff;
}

.banner_info h2 {
    padding-top: 90px;
    color: #fff;
    font-size: 32px;
    /*text-transform: uppercase;*/
    margin-top: 0;
    margin-bottom: 15px;
}

.banner_info h2:after {
    content: '';
    display: block;
    width: 205px;
    /*border-bottom: 1px solid #fff;*/
    margin-top: 15px;
}

.banner_info p {
    font-size: 16px;
    color: rgb(255, 255, 255);
}

.btn_Upgrade {
    border-style: solid;
    border-width: 1px;
    border-color: rgb(255, 165, 7);
    border-radius: 3px;
    background-image: -moz-linear-gradient(83deg, rgb(131, 47, 53) 0%, rgb(255, 165, 7) 100%);
    background-image: -webkit-linear-gradient(83deg, rgb(131, 47, 53) 0%, rgb(255, 165, 7) 100%);
    background-image: -ms-linear-gradient(83deg, rgb(131, 47, 53) 0%, rgb(255, 165, 7) 100%);
    color: #fff;
    font-size: 14px;
    text-transform: uppercase;
    font-weight: 700;
    padding: 10px 20px;
    margin-top: 30px;
}

.premium_img {
    margin-top: 10px;
}

.content_profile {
    padding-top: 20px;
}

.content_profile section {
    margin: 30px 0 0;
    /* border-bottom: 1px solid #d0d0d0; */
    padding-bottom: 40px;
}

.w_box_trySearch {
    width: 365px;
    float: left;
}

.w_owl_trySearch {
    float: right;
    width: 893px;
    margin-top: 35px;
}

.box_trySearch {
    background: #f2f5f7;
    padding: 20px;
}

.frm_trySearch label {
    font-weight: 500;
    font-size: 13px;
}

.frm_trySearch .form-control {
    border: none;
    box-shadow: none;
    border-radius: 0;
}

.frm_trySearch select.form-control {
    border-radius: 0;
    -webkit-appearance: none;
}

.title {
    font-size: 16px;
    color: rgb(47, 47, 47);
    font-weight: bold;
    text-transform: uppercase;
    margin-top: 0;
    text-align: center;
    margin-bottom: 23px;
}

.box_trySearch p {
    font-size: 13px;
    font-weight: 400;
}

select:not([multiple]) {
    -webkit-appearance: none;
    -moz-appearance: none;
    background-position: 95% 50%;
    background-repeat: no-repeat;
    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 9 5' style='enable-background:new 0 0 9 5;' xml:space='preserve'%3e%3cstyle type='text/css'%3e .st0%7bfill:%23B3B3B3;%7d %3c/style%3e%3cpolygon class='st0' points='4.5,5 0,0 0,0 9,0 '/%3e%3c/svg%3e ");
    padding: .5em;
    padding-right: 1.5em;
    -webkit-background-size: 7%;
    background-size: 12px;
}

.btn_searchResult {
    background: #ffa507;
    display: block;
    padding: 12px 20px;
    width: 100%;
    font-size: 14px;
    font-weight: 700;
    text-transform: uppercase;
}

.btn_searchResult:hover {
    background: #2f2f2f;
}

.content_profile .owl-theme {
    padding: 0 40px;
}

.content_profile .owl-theme .item a {
    display: block;
    position: relative;
    overflow: hidden;
}

.content_profile .owl_trySearch.owl-theme .item a {
    height: 230px;
}

.content_profile .owl_latestProfiles.owl-theme .item a {
    height: 250px;
}

.content_profile .owl_mostvisitedProfiles.owl-theme .item a {
    height: 200px;
}

.content_profile .owl-theme .item:hover {
    background: #dcdedf;
}

.content_profile .owl-theme .item a img {
    transition: all .2s ease-in-out;
    -webkit-transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    -ms-transition: all .2s ease-in-out;
    -o-transition: all .2s ease-in-out;
    width: 100%;
    margin: 0 auto;
}

.content_profile .owl-theme .item:hover a img {
    transform: scale(1.1);
    -webkit-transform: scale(1.1);
    -moz-transform: scale(1.1);
    -ms-transform: scale(1.1);
    -o-transform: scale(1.1)
}

.content_profile .owl-theme .item:hover p {

}

.content_profile .owl-theme .item {
    background: #f2f5f7;
    padding: 10px;
    text-align: center;
    transition: all 0.5s ease;
}

.content_profile .owl-theme .item .name {
    font-size: 15px;
    text-transform: none;
    font-weight: 500;
    margin-top: 15px;
    margin-bottom: 7px;
}

.content_profile .owl-theme .item .nation {
    font-size: 12px;
    color: #000;
    font-weight: 500;
    margin-bottom: 0;
}

.content_profile .owl-theme .item .old {
    font-size: 12px;
    color: #000;
    font-weight: 500;
    margin-bottom: 0;
}

.owl-carousel .owl-nav button:focus {
    outline: none;
}

.owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev {
    position: absolute;
    top: 30%;
    transition: all 0.5s ease;
}

.owl-carousel .owl-nav button.owl-prev {
    left: 0;
    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='31px' height='60px'%3e%3cpath fill-rule='evenodd' fill='rgb(242, 245, 247)' d='M31.000,59.975 C30.667,59.986 30.335,60.000 30.000,60.000 C13.432,60.000 0.000,46.568 0.000,30.000 C0.000,13.431 13.432,-0.000 30.000,-0.000 C30.335,-0.000 30.667,0.014 31.000,0.025 L31.000,59.975 Z'/%3e%3c/svg%3e");
    background-repeat: no-repeat;
    width: 31px;
    height: 60px;
}

.owl-carousel .owl-nav button.owl-prev:hover {
    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='31px' height='60px'%3e%3cpath fill-rule='evenodd' fill='#ffa507' d='M31.000,59.975 C30.667,59.986 30.335,60.000 30.000,60.000 C13.432,60.000 0.000,46.568 0.000,30.000 C0.000,13.431 13.432,-0.000 30.000,-0.000 C30.335,-0.000 30.667,0.014 31.000,0.025 L31.000,59.975 Z'/%3e%3c/svg%3e");
}
/* ... */

